[package]
name = "cms-rs"
version = "0.0.1"
edition = "2021"
authors = ["Emir Buğra Köksalan <emir@rust.tc>"]
license = "MIT OR Apache-2.0"
description = "Complete CMS project built with Rust, Axum, Sqlx."
homepage = "https://rust.tc"
repository = "https://github.com/kodmanyagha/cms-rs"

[workspace.lints.rust]
unused = "allow"
unsafe_code = "forbid"

[lints]
workspace = true

[dependencies]
# async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# web
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.10"

# other libs
lazy-regex = "3"
strum_macros = "0.26"
uuid = { version = "1", features = ["v4", "fast-rng", "v7"] }
anyhow = "1"
log = "0.4.21"
env_logger = "0.11.3"
dotenvy = "0.15.7"


[dev-dependencies]
anyhow = "1"
thiserror = "1"
httpc-test = "0.1.1"
